Fix kontakt link alignment on small screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -164,6 +164,7 @@ a.high-anchor {
   text-decoration: underline;
   color: $dark-blue-crayola;
   transition: all 0.25s ease-in-out;
+  text-align: center;
 }
 
 .background-dark-crayola .kontakt-link {
